--- a/package.json
+++ b/package.json
@@ -27,14 +27,16 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-player": "^2.16.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "react-tabs": "^6.0.2",
-    "react-toastify": "^10.0.4",
+    "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
-    "tailwindcss": "^3.3.5"
+    "tailwindcss": "^3.3.5",
+    "video.js": "^8.18.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
